Recommend "Term::ReadLine::Gnu", which provides "Term::ReadLine::Gnu::XS"

--- a/META.yml
+++ b/META.yml
@@ -55,7 +55,7 @@ recommends:
   JSON::XS: '0'
   LWP::UserAgent::Cached: '0'
   Mozilla::CA: '0'
-  Term::ReadLine::Gnu::XS: '0'
+  Term::ReadLine::Gnu: '0'
 requires:
   Data::Dump: '0'
   Encode: '0'
