--- a/META.yml
+++ b/META.yml
@@ -69,6 +69,7 @@ requires:
   LWP::UserAgent: '0'
   List::Util: '0'
   MIME::Base64: '0'
+  Memoize: '0'
   Term::ANSIColor: '0'
   Term::ReadLine: '0'
   Text::ParseWords: '0'
